--- a/index.html
+++ b/index.html
@@ -82,3 +82,30 @@
 
 </body>
 </html>
+<!-- 
+
+{{!-- <div class="scroll-container">
+    <div class="carousel-primary">
+      <img src="./assets2/images/crushbanner.jpg">
+    </div>
+    <div class="carousel-primary carousel-secondary">
+      <img src="./assets2/images/hubbanner.jpg">
+    </div>
+    <div class="carousel-primary carousel-secondary carousel-third">
+      <img src="./assets2/images/fundamismbanner.jpg">
+    </div>
+    <div class="carousel-primary carousel-secondary carousel-third carousel-fourth">
+      <img src="./assets2/images/fundamismbanner.jpg">
+    </div>
+
+    <div class="carousel-primary carousel-secondary carousel-third carousel-fourth carousel-fifth ">
+      <img src="./assets2/images/fundamismbanner.jpg">
+    </div>
+    <div class="carousel-primary carousel-secondary carousel-third carousel-fourth carousel-fifth carousel-sixth">
+      <img src="./assets2/images/fundamismbanner.jpg">
+    </div>
+    <div
+      class="carousel-primary carousel-secondary carousel-third carousel-fourth carousel-fifth carousel-sixth carousel-seventh">
+      <img src="./assets2/images/fundamismbanner.jpg">
+    </div>
+  </div> --}} -->
